# ns-term

./: .gitignore  Makefile  README.md  build-win.sh  build.sh  pyproject.toml
src/ns_term/: __init__.py  isp.py  lpc.py  lpctools.py  main.py  mylogger.py  ser.py
