[project]
name = "ns-term"
version = "0.0.13"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
    "python-ntp>=1.0.0",
    "typer>=0.26.8",
]

[project.scripts]
ns-term = "ns_term.main:app"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

